fix: :bug: 兼容新版集市已下载tab按钮

--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -59,7 +59,7 @@
 }
 
 @mixin icon-btn($type: "page", $w, $svg-w, $important: false) {
-  @include svg-div($w, $w, $svg-w);
+  @include svg-div($w, $svg-w);
   @include item($type, 1, $important);
 
   border-radius: map.get($radius, "base");
