--- a/theme/one-dark/dark.scss
+++ b/theme/one-dark/dark.scss
@@ -172,12 +172,12 @@
   --info-disabled: var(--blue-3); // 禁用态
   --info-light: var(--blue-2); // 浅色的选中态
 
-  --base-1: 30, 34, 39;
+  --base-1: 33, 37, 43; //30, 34, 39;
   --base-2: 90, 93, 94, 0.31;
   --base-3: 99, 102, 103, 0.31;
   --base-4: 108, 111, 112, 0.31;
 
-  --page-1: 35, 39, 46;
+  --page-1: 40, 44, 52; //35, 39, 46;
   --page-2: 90, 93, 94, 0.51;
   --page-3: 99, 102, 103, 0.51;
   --page-4: 108, 111, 112, 0.51;
@@ -187,7 +187,7 @@
   --component-3: 56, 63, 74; //108, 111, 112, 0.51;
   --component-4: 117, 120, 121, 0.51;
 
-  --pop-1: 30, 34, 39;
+  --pop-1: 33, 37, 43;
   --pop-2: 44, 49, 58;
   --pop-3: 50, 56, 66;
   --pop-4: 56, 63, 74;
