--- a/styles/dialog/keymapList.scss
+++ b/styles/dialog/keymapList.scss
@@ -5,7 +5,6 @@
 #keymapList {
   .b3-list {
     &-item {
-      padding: list.$padding !important;
       .b3-text-field {
         @include component("small");
       }
@@ -23,6 +22,10 @@
       &__action {
         @include icon-btn("component", 24px, map.get($icon, "small"));
       }
+    }
+    
+    &--border>ul li{
+      margin: 0;
     }
   }
 }
