--- a/styles/panel/outline.scss
+++ b/styles/panel/outline.scss
@@ -8,7 +8,6 @@
   // 标题
   > .b3-list-item {
     @include item("component");
-    @include focus-before(math.div(list.$item-h - 16px, 2), 0px);
     margin: 0 8px 8px;
     padding-left: 8px;
     .b3-list-item {
@@ -20,6 +19,10 @@
       }
     }
 
+    &:not(:empty) {
+      @include focus-before(math.div(list.$item-h - 16px, 2), 0px);
+    }
+    
     &:empty {
       @include reset-style();
     }
